# jt_ib_value_avg

./: app.py  configuration.py  pyproject.toml  trader.py
lib/: contracts.py  ib_api.py  utils.py
